--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <h1>Isso é um título</h1>
     <p>Isso é um parágrafo</p>
     <img src="imagem.jpeg" alt="Logo do html 5">
-    
+    <a href="https://github.com/Alvarezgonca">Acesse aqui: Github do Daniel</a>
+    <br>
+    <table width="50%" border="1" style="text-align: center;">
+        <tr>
+            <th>Nome</th>
+            <th>Idade</th>
+            <th>altura</th>
+        </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>19 anos</td>
+            <td>1.65 metros</td>
+        </tr>
+        <tr>
+            <td>Débora</td>
+            <td>14 anos</td>
+            <td>1.60 metros</td>
+        </tr>
+    </table>
 </body>
 </html>
